--- a/Algebra/skript.tex
+++ b/Algebra/skript.tex
@@ -10,11 +10,15 @@
 \thispagestyle{empty}
 \tableofcontents
 \clearpage
-\include{sec1}
-\include{sec2}
-\include{sec3}
-\include{sec4}
-\include{sec5}
+\include{sec21}
+\include{sec22}
+\include{sec23}
+\include{sec24}
+\include{sec25}
 % \include{sec6}
 % \include{sec7}
+\include{sec31}
+\include{Normalformen}
+\include{sec32}
+\include{sec33}
 \end{document}
