--- a/Algebra/skript.tex
+++ b/Algebra/skript.tex
@@ -15,7 +15,7 @@
 \include{sec23}
 \include{sec24}
 \include{sec25}
-% \include{sec6}
+\include{sec26}
 % \include{sec7}
 \include{sec31}
 \include{Normalformen}
