--- a/DBS/skript.tex
+++ b/DBS/skript.tex
@@ -13,10 +13,11 @@
 \include{sec1}
 \include{sec2}
 \include{sec3}
-% \include{sec4}
+\include{sec4}
 % \include{sec5}
 % \include{sec6}
 % \include{sec7}
 
 \include{sql1.tex}
+\include{sql2.tex}
 \end{document}
