Alegrba 28.12 vor 6am

--- a/Algebra/sec26.tex
+++ b/Algebra/sec26.tex
@@ -36,3 +36,18 @@
 \begin{proof}
     We can use the induction on natural number here. For \(k = 1\) it is trivial. Let \(k>1\). By Theorem \ref{centerbig} we can find a central element \(a\) of order \(p\). The quotient group \(\bar{G} = G / (a)\) is of order \(p^{k-1}\).
 \end{proof}
+
+\begin{theorem}[Sylow]
+    Let \(G\) be a finite group of order \(p^\alpha m\), where \(p\) is a prime, \(m\geq 1\), and \(p\) does not divide \(m\). Then: \begin{enumerate}
+        \item \(\mathrm{Syl}_p(G)\not = \emptyset\), i.e. Sylow \(p\)-subgroups exist!
+        \item \(n_p(G) = 1\mod p \wedge n_p(G) \mid m\)
+        \item  Any \(p\)-subgroup of \(G\) is contained in a Sylow \(p\)-subgroup.
+        \item Any Sylow \(p\)-subgroups are conjugate in \(G\), i.e. \(P_1\) and \(P_2\) are both Sylow \(p\)-subgroups, then there is some \(g\in G\) such that \(P_1 = gP_1 g^{-1]}\). In particular \(n_p(G) = (G:N_G(P))\).
+    \end{enumerate}    
+\end{theorem}
+\begin{remark}
+    Attention: Herr S. use symbol \(s_p\) for the number of Sylow \(p\)-subgroup. (Just notation.)
+\end{remark}
+\begin{proof}
+    Whatever.FIXME:
+\end{proof}
