--- a/Algebra/skript.tex
+++ b/Algebra/skript.tex
@@ -16,7 +16,8 @@
 \include{sec24}
 \include{sec25}
 \include{sec26}
-% \include{sec7}
+\include{sec27}
+\include{sec28}
 \include{sec31}
 \include{Normalformen}
 \include{sec32}
